# CatsVSDog

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: helper.hpp  params.hpp
src/: helper.cpp  main.cpp
